rendered/envs/alpha/paperless/deployment-paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  strategy:
    rollingUpdate: null
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/paperless-sftp-scripts: 01c3d65d08eee0a8eb65b0339aa2c4831032db70e02f4dc1d245da341d87b767
      labels:
        app: paperless
    spec:
      containers:
        - env:
            - name: PAPERLESS_DBPASS
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgresql
            - name: PAPERLESS_URL
              value: https://paperless.zebradil.dev
            - name: PAPERLESS_CSRF_TRUSTED_ORIGINS
              value: https://paperless.zebradil.dev,https://paperless.junior.zebradil.dev,https://paperless.ts.zebradil.dev,https://paperless.junior.ts.zebradil.dev,https://paperless.lan.zebradil.dev,https://paperless.junior.lan.zebradil.dev
            - name: PAPERLESS_CORS_ALLOWED_HOSTS
              value: https://paperless.zebradil.dev,https://paperless.junior.zebradil.dev,https://paperless.ts.zebradil.dev,https://paperless.junior.ts.zebradil.dev,https://paperless.lan.zebradil.dev,https://paperless.junior.lan.zebradil.dev
            - name: PAPERLESS_DBHOST
              value: postgresql
            - name: PAPERLESS_DBUSER
              value: paperless
            - name: PAPERLESS_REDIS
              value: redis://redis-master:6379
            - name: PAPERLESS_OCR_LANGUAGE
              value: deu+eng+rus
            - name: PAPERLESS_OCR_LANGUAGES
              value: deu eng rus
            - name: PAPERLESS_OCR_OUTPUT_TYPE
              value: pdf
            - name: PAPERLESS_OCR_ROTATE_PAGES_THRESHOLD
              value: "4"
            - name: PAPERLESS_OCR_USER_ARGS
              value: '{"invalidate_digital_signatures": true}'
            - name: PAPERLESS_SECRET_KEY
              value: ref+sops://static/0.sops.yaml#/sessionSecretKey+
            - name: PAPERLESS_TIME_ZONE
              value: Europe/Berlin
          image: oci.zebradil.dev/ghcr.io-cache/paperless-ngx/paperless-ngx@sha256:6c86cad803970ea782683a8e80e7403444c5bf3cf70de63b4d3c8e87500db92f
          name: paperless
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 768Mi
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/consume
              name: consume
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: USER_NAME
              value: paperless
            - name: PUBLIC_KEY
              value: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCnzIKHO6ux0JUuSZGmnrVtukIvvqiPRt3pdwPbvMDQwTSFtW0xdORkYKGsCYhPuzEcLMFfJgUT4JEtMPFdj1TTizo5fDOlQP+pJMoRc4HKmqzTsK4FvmS/7Bl6IvWbhAcceKynGkZmOrQziMo7RINrFy1/sjf9ZVaMoQvbFjLUEGboxuq0gJVfgxlRQX28rHolFZk9YWWbHMJ0Gbw/YLQWqf3EJuQnyAWSrnZsX+a8CsKoCzlgsFne91PgNFA5OhkIMkKQy1Mk4qSXhQ7ZUHhcN7reDhyyDX/E+Y0y87Y5NZ8OxAU6Bzl0wZKcAIhZkE/hvhb6L4hJ98VS04QD7Gpj
            - name: LOG_STDOUT
              value: "true"
          image: index.docker.io/linuxserver/openssh-server@sha256:d55ff78303834a03ef4bf21733fccce12365949ed1715bdbe7e42d1b66db620a
          name: sftp
          ports:
            - containerPort: 2222
              name: sftp
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 16Mi
          volumeMounts:
            - mountPath: /srv/consume
              name: consume
            - mountPath: /custom-cont-init.d
              name: sftp-init-scripts
      enableServiceLinks: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: consume
          persistentVolumeClaim:
            claimName: consume
        - emptyDir: {}
          name: sftp-init-scripts
        - configMap:
            name: paperless-sftp-scripts
          name: sftp-init-cm
