rendered/envs/alpha/paperless/statefulset-paperless.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  serviceName: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - tail -f /dev/null
          image: ghcr.io/paperless-ngx/paperless-ngx:1.16.5
          name: paperless
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
