rendered/envs/alpha/paperless/service-paperless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: paperless
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: sftp
      port: 2222
      targetPort: sftp
  selector:
    app: paperless
