rendered/envs/alpha/paperless/service-paperless_url.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: PAPERLESS_URL
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: paperless
