rendered/envs/alpha/paperless/ingress-paperless.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: paperless
spec:
  rules:
    - host: paperless.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  name: http
            path: /
            pathType: Prefix
