rendered/envs/alpha/paperless/ingressroute-paperless-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: paperless-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`paperless.lan.zebradil.dev`) || Host(`paperless.junior.lan.zebradil.dev`) || Host(`paperless.zebradil.dev`) || Host(`paperless.junior.zebradil.dev`)
      services:
        - name: paperless
          port: http
