rendered/envs/alpha/paperless/ingressroute-paperless-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: paperless-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`paperless.ts.zebradil.dev`) || Host(`paperless.junior.ts.zebradil.dev`)
      services:
        - name: paperless
          port: http
