rendered/envs/alpha/paperless/ingressroutetcp-paperless-sftp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: paperless-sftp
spec:
  entryPoints:
    - paperless-sftp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: paperless
          port: sftp
