rendered/envs/alpha/paperless/networkpolicy-postgresql-read.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/component: read
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.1.0
    helm.sh/chart: postgresql-14.0.1
  name: postgresql-read
  namespace: paperless
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 5432
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: primary
              app.kubernetes.io/instance: postgresql
              app.kubernetes.io/name: postgresql
  ingress:
    - ports:
        - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/component: read
      app.kubernetes.io/instance: postgresql
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
    - Egress
